# TradingSystemFramework

./: .gitignore  ARCHITECTURE.md  OPTIMIZER_ARCHITECTURE.md  README.md  claude_template.txt  main.py  optimizer_demo.py  pyproject.toml  requirements.txt
examples/: market_session_demo.py
framework/: __init__.py  risk_reward.py  sequential_fsm.py
framework/backtest/: __init__.py  strategy_backtest.py
framework/data_handling/: __init__.py  data_handler.py  market_session.py
framework/data_sources/: __init__.py  cache.py  errors.py  massive_provider.py  protocol.py  retry.py  yfinance_provider.py
framework/examples/: example_usage.py
framework/features/: __init__.py  base_feature.py  donchian_feature.py  ema_feature.py  macd_feature.py  rsi_feature.py
framework/optimization/: __init__.py  feature_optimizer.py  strategy_optimizer.py
framework/performance/: __init__.py  calmar_ratio_measure.py  cvar_measure.py  max_drawdown_measure.py  measures.py  monte_carlo_measures.py  profit_factor_measure.py  returns_measure.py  sharpe_ratio_measure.py  sortino_ratio_measure.py  total_return_measure.py  total_trades_measure.py  var_measure.py  win_rate_measure.py
framework/signals/: __init__.py
framework/significance_testing/: __init__.py  (+2 more)
research/: README.md  __init__.py  create_project.py  research_runner.py  run.py  run_project.py  version_manager.py
tests/: test_data_sources_cache.py  test_ema_ohlc.py  test_market_session.py  test_massive_provider.py  test_risk_reward.py  test_sequential_fsm.py  test_signal_plotting.py
tmp/: bar_permute.py
(+51 files in other folders)
