[project]
name = "tradingsystemframework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.8.0",
    "jupyter>=1.0.0",
    "massive>=2.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.24.0",
    "polars>=0.20.0",
    "pyarrow>=10.0.0",
    "scipy>=1.9.0",
    "seaborn>=0.11.0",
    "ta-lib>=0.4.0",
    "yfinance>=0.2.0",
]
